--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT = 5000
-MONGO_URL = mongodb+srv://root:1234@cluster0.ruedw.mongodb.net/?retryWrites=true&w=majority
+DB_USERNAME = root
+DB_PASSWORD = 1234
 ACCESS_TOKEN_SECRET = MTEORANN
